--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2"
+  },
+  "dependencies": {
+    "@babel/core": "^7.10.5",
+    "babel": "^6.23.0"
   }
 }
