--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -1,56 +1,32 @@
 {
-  "name": "webpackdemo",
+  "name": "WebpackDemo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "analyse": "webpack --profile --json > stats.json"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@babel/preset-env": "^7.9.0",
-    "babel-loader": "^8.1.0",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.15",
-    "optimize-css-assets-webpack-plugin": "^5.0.3"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/polyfill": "^7.8.7",
-    "add-asset-html-webpack-plugin": "^3.1.3",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
-    "core-js": "^3.6.4",
-    "css-loader": "^3.4.2",
-    "eslint-loader": "^3.0.3",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.0.0",
-    "html-webpack-plugin": "^4.0.4",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "thread-loader": "^2.1.3",
-    "url-loader": "^4.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "workbox-webpack-plugin": "^5.1.2"
-  },
-  "browserslist": {
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ],
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ]
+    "@babel/preset-env": "^7.11.5",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.2",
+    "file-loader": "^6.1.0",
+    "html-webpack-plugin": "^4.4.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.11.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-bundle-analyser": "^1.4.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12"
   }
 }
