--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "promises-aplus-tests MyPromise"
   },
   "keywords": [],
   "author": "tengfei",
@@ -14,6 +14,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "promises-aplus-tests": "^2.1.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
