文件夹重命名

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "promises-aplus-tests MyPromise"
+    "test-out": "promises-aplus-tests MyPromise",
+    "test": "promises-aplus-tests ./JS/promise/MyPromiseCopy"
   },
   "keywords": [],
   "author": "tengfei",
