--- a/FunctionalPrograming/rxjs-learning/package.json
+++ b/FunctionalPrograming/rxjs-learning/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "rxjs": "^6.6.3",
-    "rxjs-compat": "^6.6.3"
+    "rxjs": "^6.6.3"
   }
 }
