--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "preserveConstEnums": false
+    "preserveConstEnums": false,
+    "sourceMap": true,
   }
 }
